Fixes gallery photo spacing

--- a/styles/pages/_gallery.scss
+++ b/styles/pages/_gallery.scss
@@ -15,6 +15,7 @@
   height: 300px;
   object-fit: cover;
   cursor: pointer;
+  margin-bottom: 20px;
   transition: 0.4s ease-in-out;
   box-shadow: 0px 0px 3px #eaeaea;
   &:hover {
